{{cookiecutter.project_slug}}/terraform_single_instance/main.tf
resource "random_pet" "this" {}
data "aws_caller_identity" "this" {}

provider "aws" {
  region = var.AWS_REGION
}

module "ami" {
  source = "github.com/insight-infrastructure/terraform-aws-ami.git?ref=v0.1.0"
}

resource "aws_key_pair" "this" {
  //count      = var.public_key_path != "" && var.create ? 1 : 0
  public_key = file(var.public_key_path)
}

locals {
  tags = merge(var.tags, { Name = var.name })
}

locals {
  logging_bucket_name = var.logging_bucket_name == "" ? "logs-${data.aws_caller_identity.this.account_id}" : var.logging_bucket_name
}

// creating elastic ip
resource "aws_eip" "eip_manager" {
  instance = aws_instance.this.id
  vpc = true

  lifecycle {
    prevent_destroy = false
  }

}

resource "aws_eip_association" "eip_assoc" {
  instance_id = aws_instance.this.id
  allocation_id = aws_eip.eip_manager.id
}



resource "aws_instance" "this" {
  //count         = var.create ? 1 : 0
  ami           = module.ami.ubuntu_1804_ami_id
  instance_type = var.instance_type
  subnet_id              = var.subnet_id
  vpc_security_group_ids = compact(concat(aws_security_group.this.*.id, var.additional_security_group_ids))
  iam_instance_profile = var.iam_instance_profile
  key_name             = var.public_key_path == "" ? var.key_name : aws_key_pair.this.*.key_name[0]
  security_groups = [
    aws_security_group.ssh.name,
    aws_security_group.http.name
  ]
  root_block_device {
    volume_size = var.root_volume_size
    volume_type = var.root_volume_type
    iops        = var.root_iops
  }

  // first creating copy of code into deployment folder
  provisioner "local-exec" {
    command = "bash ../scripts/copy-to-deployment.sh"
  }

  // copying over source code to instance
  provisioner "file" {
    source = "../deployments/"
    destination = "/home/ubuntu/"
    connection {
      type = "ssh"
      user = "ubuntu"
      private_key = file(var.private_key_path)
      host = self.public_ip
    }
  }

  // run user data
  user_data = file("scripts/user-data.sh")
  tags = merge({ name = var.name }, local.tags)

  provisioner "remote-exec" {
    inline = [
      "sudo docker-compose -f /home/ubuntu/${var.code_folder} up"
    ]
  }

}

variable "domain_name" {
  description = "The domain - example.com. Blank for no ssl / nginx"
  type        = string
  default     = ""
}

variable "hostname" {
  description = "The hostname - ie hostname.example.com"
  type        = string
  default     = ""
}

//resource "aws_route53_zone" "launch_with_click" {
//  //count = var.domain_name != "" ? 1 : 0
//  name  = var.domain_name
//}
//
//resource "aws_route53_record" "launch_with_click" {
//  count = var.domain_name != "" && var.hostname != "" ? 1 : 0
//  name    = var.domain_name
//  type    = "A"
//  ttl     = "300"
//  zone_id = aws_route53_zone.launch_with_click.zone_id
//  records = [join("", aws_instance.this.*.public_ip)]
//}
//
//output "name_server" {
//  value=aws_route53_zone.launch_with_click.name_servers
//}



//output "associated_ip" {
//  value = aws_instance.this[count.index].associate_public_ip_address
//}
